--- a/gateway/src/main/resources/templates/new-reject.html
+++ b/gateway/src/main/resources/templates/new-reject.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <button class="btn btn-lg btn-primary btn-block" type="submit"
-                    th:value="#{add.new.renouncement}">Complain inspector
+                    th:value="#{add.new.renouncement}">Add renouncement
             </button>
         </div>
     </form>
